--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
+  http: ^0.12.2
+  flutter_html: ^1.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
