google map init

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
         android:label="jwm"
         android:icon="@mipmap/ic_launcher"
         android:usesCleartextTraffic="true">
+    
+            <meta-data
+              android:name="com.google.android.geo.API_KEY"
+              android:value="AIzaSyCwvl2Fm5utTGNbnnUtlkA1_sNDx1zCtGs"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
