--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,9 @@ dependencies:
     
   http: ^0.12.2
   flutter_html: ^1.2.0
-
+  naver_map_plugin: ^0.9.6
+  geolocator: ^6.0.0
+  google_maps_flutter: ^0.5.33
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
