--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   naver_map_plugin: ^0.9.6
   geolocator: ^6.0.0
   google_maps_flutter: ^0.5.33
+  # permission: ^0.1.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -52,6 +53,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - asset/jwm_loading.png
+    - asset/jwm_location.png
     # - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
